Fixed the alignment of text and logo

--- a/style.css
+++ b/style.css
@@ -1,12 +1,40 @@
-.container{
-    display:flex;
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+}
+
+.header-container {
+    display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
+}
+
+.logo {
+    margin-right: 20px;
+}
+
+.logo img {
+    width: 100px;
+    height: auto;
+}
+
+.text {
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
-.container img{
-    float: left;
-    width: 70px;
-    height: 80px;
-    margin-right: 20px;
+
+.univ-name{
+    font-weight: bold;
+    font-weight: 1.2em;
+}
+
+.certificate h2 {
+    font-size: 24px;
+    letter-spacing: 10px;
+    font-weight: bold;
+    text-align: center;
 }
